--- a/hotel_booking/bookings/templates/bookings/book_room.html
+++ b/hotel_booking/bookings/templates/bookings/book_room.html
@@ -1,7 +1,7 @@
 {% extends 'bookings/base.html' %}
 
 {% block content %}
-<div class="card shadow">
+<div class="card shadow card-3d">
     <div class="card-header bg-info text-white">
         <h2>Book Room {{ room.room_number }}</h2>
         <h4>{{ room.hotel.name }}</h4>
