--- a/hotel_booking/bookings/templates/bookings/booking_confirmation.html
+++ b/hotel_booking/bookings/templates/bookings/booking_confirmation.html
@@ -1,7 +1,7 @@
 {% extends 'bookings/base.html' %}
 
 {% block content %}
-<div class="card shadow">
+<div class="card shadow card-3d">
     <div class="card-header bg-success text-white">
         <h2>Booking Confirmed!</h2>
     </div>
